# llm-test

./: .gitignore  README.md  data_prepare.ipynb  efficient_serving_llms.ipynb  finetuning_llm_from_scratch.ipynb  langchain_basic.ipynb  llama3-rag.ipynb  openai_prompt.ipynb  pyproject.toml  requirements.txt  train.py  transformer_train.ipynb
agent/: components.py  essay_writer.py  human_in_loop.py  langchain_basic.ipynb  llama3-rag.ipynb  openai_prompt.ipynb  persistance_stream.py  readme.md
api/: openai.py  tavily.py
ddfs/comfy/custom_nodes/image_selectors/: __init__.py  node.py  pyproject.toml
ddfs/comfy/custom_nodes/image_selectors/js/: image_selector.js
langchain/: components.py  langgraph_test.py  readme.md
model/: download_model.py  efficient_serving_llms.ipynb  finetuning_llm_from_scratch.ipynb
model/diffusion/: diffusion_fast_sampling.ipynb
rag/: index_pq-checkpoint.ipynb  lsh-checkpoint.ipynb  pq.py
tool/: openai.py
vdb/: index_pq.ipynb
